--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <!--#include virtual="/includes/top.html" -->
 <!-- Text start -->
 
+<h1>Linux - friheden til at skrive bøger :-)</h1>
+
 <ul>
-<li><a href="friheden/bog">Friheden</a></li>
-<li><a href="admin/bog">Admin</a></li>
-<li><a href="web/bog">Web</a></li>
-<li><a href="sikkerhed/bog">sikkerhed</a></li>
-<li><a href="program/bog">program</a></li>
+<li><a href="friheden/bog">Friheden</a> og <a href="program/linuxbog.pdf.gz">som PDF</a></li>
+<li><a href="admin/bog">Admin</a> og <a href="program/linuxbog.pdf.gz">som PDF</a></li>
+<li><a href="web/bog">Web</a>og <a href="program/linuxbog.pdf.gz">som PDF</a></li>
+<li><a href="sikkerhed/bog">sikkerhed</a> og <a href="program/linuxbog.pdf.gz">som PDF</a></li>
+<li><a href="program/bog">program</a> og <a href="program/linuxbog.pdf.gz">som PDF</a></li>
 </ul>
 
 <!-- Text slut -->
