--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 
 <ul>
-<li><a href="friheden/bog/">Friheden</a> og <a href="program/linuxbog.pdf.gz">som PDF</a></li>
-<li><a href="admin/bog/">Admin</a> og <a href="program/linuxbog.pdf.gz">som PDF</a></li>
-<li><a href="web/bog/">Web</a> og <a href="program/linuxbog.pdf.gz">som PDF</a></li>
-<li><a href="sikkerhed/bog/">sikkerhed</a> og <a href="program/linuxbog.pdf.gz">som PDF</a></li>
+<li><a href="friheden/bog/">Friheden</a> og <a href="friheden/linuxbog.pdf.gz">som PDF</a></li>
+<li><a href="admin/bog/">Admin</a> og <a href="admin/linuxbog.pdf.gz">som PDF</a></li>
+<li><a href="web/bog/">Web</a> og <a href="web/linuxbog.pdf.gz">som PDF</a></li>
+<li><a href="sikkerhed/bog/">sikkerhed</a> og <a href="sikkerhed/linuxbog.pdf.gz">som PDF</a></li>
 <li><a href="program/bog/">program</a> og <a href="program/linuxbog.pdf.gz">som PDF</a></li>
 </ul>
 
