--- a/index.html
+++ b/index.html
@@ -13,12 +13,32 @@
 <h1 align="center">Linux - friheden til at skrive bøger :-)</h1>
 
 
+
 <ul>
-<li><a href="friheden/bog/">Friheden</a> og <a href="friheden/linuxbog.pdf.gz">som PDF</a></li>
-<li><a href="admin/bog/">Admin</a> og <a href="admin/linuxbog.pdf.gz">som PDF</a></li>
-<li><a href="web/bog/">Web</a> og <a href="web/linuxbog.pdf.gz">som PDF</a></li>
-<li><a href="sikkerhed/bog/">sikkerhed</a> og <a href="sikkerhed/linuxbog.pdf.gz">som PDF</a></li>
-<li><a href="program/bog/">program</a> og <a href="program/linuxbog.pdf.gz">som PDF</a></li>
+<li><a href="friheden/bog/">Friheden</a> 
+og <a href="friheden/linux-friheden.pdf.gz">som PDF</a>
+og <a href="friheden/linux-friheden.ps.gz">som PS</a>
+</li>
+
+<li><a href="admin/bog/">Admin</a> 
+og <a href="admin/linux-admin.pdf.gz">som PDF</a>
+og <a href="admin/linux-admin.ps.gz">som PS</a>
+</li>
+
+<li><a href="web/bog/">Web</a> 
+og <a href="web/linux-web.pdf.gz">som PDF</a>
+og <a href="web/linux-web.ps.gz">som PS</a>
+</li>
+
+<li><a href="sikkerhed/bog/">sikkerhed</a> 
+og <a href="sikkerhed/linux-sikkerhed.pdf.gz">som PDF</a>
+og <a href="sikkerhed/linux-sikkerhed.ps.gz">som PS</a>
+</li>
+
+<li><a href="program/bog/">program</a> 
+og <a href="program/linux-program.pdf.gz">som PDF</a>
+og <a href="program/linux-program.ps.gz">som PDF</a>
+</li>
 </ul>
 
 <!-- Text slut -->
