--- a/friheden/palm/home.html
+++ b/friheden/palm/home.html
@@ -4,7 +4,7 @@
     "DTD/xhtml1-strict.dtd">
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Linuxbog</title>
+    <title>Linux - Friheden til at vælge</title>
   </head>
 <body>
 
@@ -15,7 +15,7 @@
     <ul>
     <li> <a href="file:../bog/index.html" 
            MAXDEPTH="2" 
-           NOIMAGES>Linux - Friheden til at vælge</a></li>
+           NOIMAGES>Start her</a></li>
     </ul>
 
 <p>
@@ -23,7 +23,7 @@ Bogen kan også læses på adressen <tt>http://www.sslug.dk/linuxbog<tt>
 </p>
 <p>
 Fejl og mangler bedes tilsendt til <tt>linuxbog@sslug.dk</tt> eller
-hvis du er meldem af SSLUG så til <tt>sslug-bog@sslug.dk</tt>
+hvis du er medlem af SSLUG <tt>sslug-bog@sslug.dk</tt>
 </p>
 </body>
 </html>
