--- a/sikkerhed/palm/home.html
+++ b/sikkerhed/palm/home.html
@@ -4,13 +4,13 @@
     "DTD/xhtml1-strict.dtd">
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Linux - Friheden til at have sin server i fred</title>
+    <title>Linux - Friheden til sikkerhed på internettet</title>
   </head>
 <body>
 
 <!-- ######################################################################### -->
 
-<h1>Linux - Friheden til at have sin server i fred</h1>
+<h1>Linux - Friheden til sikkerhed på internettet</h1>
 
     <ul>
     <li> <a href="file:../bog/index.html" 
