--- a/misc/home.html
+++ b/misc/home.html
@@ -15,6 +15,8 @@
     <ul>
     <li> <a href="file:../friheden/bog/index.html" MAXDEPTH="2"
     NOIMAGES>Linux - Friheden til at vælge</a> - En bog Linux-begynderbog.</li>
+    <li> <a href="file:../applikationer/bog/index.html" MAXDEPTH="2"
+    NOIMAGES>Linux - Friheden til at vælge programmer</a> - En bog om Linuxprogrammer.</li>
     <li> <a href="file:../admin/bog/index.html" MAXDEPTH="2"
     NOIMAGES>Linux - Friheden til at systemadministration</a> - 
      Administrer din egen Linux-server </li>
