--- a/alle/palm/home.html
+++ b/alle/palm/home.html
@@ -21,6 +21,11 @@
 <p>
 Bogen kan også læses på adressen <tt>http://www.sslug.dk/linuxbog<tt>
 </p>
+
+<p>
+Se bogens <a href="file:../bog/stikord.html">stikordsregister</a>.
+</p>
+
 <p>
 Fejl og mangler bedes tilsendt til <tt>linuxbog@sslug.dk</tt> eller
 hvis du er medlem af SSLUG <tt>sslug-bog@sslug.dk</tt>
