Tak til Lars Kiæulf

--- a/todo.html
+++ b/todo.html
@@ -25,6 +25,14 @@ vil være guld.</li>
 <li>Moduler til kernen</li>
 <li>/etc/modules.conf er stadig et mysterium - du må meget gerne
 forklare ;-)</li>
+
+<li>Gerne noget om routning - lidt eksempler på hvordan sådan noget stykkes
+sammen!</li>
+<li>Noget om Dial On Demand - Igen eksempler, gerne, hvis det er muligt, om
+hvordan man sætter op med flere forskellige "profiler" afhængig af
+forespørgelsen fra klienten.</li>
+
+
 </ul>
 <!-- Text slut -->
 <!--#include virtual="/includes/bottom.html" -->
