--- a/todo.html
+++ b/todo.html
@@ -25,13 +25,15 @@ vil være guld.</li>
 <li>Moduler til kernen</li>
 <li>/etc/modules.conf er stadig et mysterium - du må meget gerne
 forklare ;-)</li>
-
 <li>Gerne noget om routning - lidt eksempler på hvordan sådan noget stykkes
 sammen!</li>
 <li>Noget om Dial On Demand - Igen eksempler, gerne, hvis det er muligt, om
 hvordan man sætter op med flere forskellige "profiler" afhængig af
 forespørgelsen fra klienten.</li>
-
+<li>Der mangler stadig mange ordforklaringer</li>
+<li>Det ville være godt med markering i SGML-filerne af flere
+stikord. Kontakt Peter Toft pto@sslug.dk hvis du vil hjælpe med dette</li>
+</li>
 
 </ul>
 <!-- Text slut -->
