--- a/todo.html
+++ b/todo.html
@@ -13,6 +13,10 @@
 
 <ul>
 <li>Installationsvejledning til nyeste Debian - skal i "friheden".</li>
+<li>Installationsvejledning til nyeste Corel Linux - bør vel med i
+"friheden".</li>
+<li>Der skal skrives om KDE 2 i "applikationer"</li>
+<li>Installationsvejledning til nyeste Mandrake Linux - skal med i "friheden".</li>
 <li>Generel bedre understøttelse af Debian - i alle bøger.</li>
 <li>Mere om at afspille lyd og video på Linux - skal i "applikationer"
 i kapitlet om lyd og video.</li>
