--- a/todo.html
+++ b/todo.html
@@ -12,10 +12,12 @@
 <H1 align="center">TODO liste til Friheden</h1>
 
 <ul>
-<li>Installationsvejledning til nyeste Debian - skal i "friheden".</li>
+<li>Installationsvejledning til nyeste Debian - skal i
+"friheden". Kenneth Geisshirt laver dette til ca. midt januar.</li>
 <li>Installationsvejledning til nyeste Corel Linux - bør vel med i
 "friheden".</li>
-<li>Der skal skrives om KDE 2 i "applikationer"</li>
+<li>Der skal skrives om KDE 2 i "applikationer" - Jesper Krogh skriver
+om dette jesper (AT) linuxpusher.dk</li>
 <li>Installationsvejledning til nyeste Mandrake Linux - skal med i "friheden".</li>
 <li>Generel bedre understøttelse af Debian - i alle bøger.</li>
 <li>Mere om at afspille lyd og video på Linux - skal i "applikationer"
