--- a/todo.html
+++ b/todo.html
@@ -12,6 +12,9 @@
 <H1 align="center">TODO liste til Friheden</h1>
 
 <ul>
+<li>Afsnit om at droppe sendmail til fordel for qmail til admin bogen</li>
+<li>Afsnit om at droppe sendmail til fordel for postfix til admin bogen</li>
+<li>Afsnit om ezmlm (liste-manager til qmail).</li>
 <li>Installationsvejledning til nyeste Debian - skal i
 "friheden". Kenneth Geisshirt laver dette til ca. midt januar.</li>
 <li>Installationsvejledning til nyeste Corel Linux - bør vel med i
