--- a/todo.html
+++ b/todo.html
@@ -12,6 +12,9 @@
 <H1 align="center">TODO liste til Friheden</h1>
 
 <ul>
+<li>
+Er der ikke nogen af Jer som har lyst til at skrive om
+3D grafik; Se f.eks. http://www.linux.com/newsitem.phtml?sid=1&aid=11335</li>
 <li>Afsnit om at droppe sendmail til fordel for qmail til admin bogen</li>
 <li>Afsnit om at droppe sendmail til fordel for postfix til admin bogen</li>
 <li>Afsnit om ezmlm (liste-manager til qmail).</li>
