--- a/todo.html
+++ b/todo.html
@@ -12,6 +12,7 @@
 <H1 align="center">TODO liste til Friheden</h1>
 
 <ul>
+<li>Format at /etc/X11/XF86Config-4 filen</li>
 <li>
 Er der ikke nogen af Jer som har lyst til at skrive om
 3D grafik; Se f.eks. http://www.linux.com/newsitem.phtml?sid=1&aid=11335</li>
