--- a/todo.html
+++ b/todo.html
@@ -13,6 +13,9 @@
 
 <ul>
 <li>Format at /etc/X11/XF86Config-4 filen</li>
+<li>Afsnit om at installere Linux på andet end Intel</li>
+<li>Afsnit om at lave egne RPM-pakker og tilsvarende om at 
+installere SRPM</li>
 <li>
 Er der ikke nogen af Jer som har lyst til at skrive om
 3D grafik; Se f.eks. http://www.linux.com/newsitem.phtml?sid=1&aid=11335</li>
