--- a/todo.html
+++ b/todo.html
@@ -12,6 +12,7 @@
 <H1 align="center">TODO liste til Friheden</h1>
 
 <ul>
+<li>Afsnit om ntp ønskes</li>
 <li>Format at /etc/X11/XF86Config-4 filen</li>
 <li>Afsnit om at installere Linux på andet end Intel</li>
 <li>Afsnit om at lave egne RPM-pakker og tilsvarende om at 
