--- a/todo.html
+++ b/todo.html
@@ -13,7 +13,7 @@
 
 <ul>
 <li>Afsnit om ntp ønskes</li>
-<li>Format at /etc/X11/XF86Config-4 filen</li>
+<li>Format af /etc/X11/XF86Config-4 filen</li>
 <li>Afsnit om at installere Linux på andet end Intel</li>
 <li>Afsnit om at lave egne RPM-pakker og tilsvarende om at 
 installere SRPM</li>
@@ -28,9 +28,6 @@ Er der ikke nogen af Jer som har lyst til at skrive om
 "friheden". Kenneth Geisshirt laver dette til ca. midt januar.</li>
 <li>Installationsvejledning til nyeste Corel Linux - bør vel med i
 "friheden".</li>
-<li>Der skal skrives om KDE 2 i "applikationer" - Jesper Krogh skriver
-om dette jesper (AT) linuxpusher.dk</li>
-<li>Installationsvejledning til nyeste Mandrake Linux - skal med i "friheden".</li>
 <li>Generel bedre understøttelse af Debian - i alle bøger.</li>
 <li>Mere om at afspille lyd og video på Linux - skal i "applikationer"
 i kapitlet om lyd og video.</li>
@@ -38,7 +35,7 @@ i kapitlet om lyd og video.</li>
 <li>Der skal meget mere i "web"-bogen om Apache, 
 PHP og databaser. Eksempler som man nogenlunde nemt kan få i luften
 vil være guld.</li>
-<li>Brug af StarOffice/OpenOffice.</li>
+<li>Stort ønske - brug af StarOffice/OpenOffice.</li>
 <li>Mere om Linux kernen.</li>
 <li>Moduler til kernen</li>
 <li>/etc/modules.conf er stadig et mysterium - du må meget gerne
