--- a/todo.html
+++ b/todo.html
@@ -12,6 +12,7 @@
 <H1 align="center">TODO liste til Friheden</h1>
 
 <ul>
+<li>Skriv om netovervågning med Big Brother, Netsaint osv.</li>
 <li>Skriv om GCD - http://libre.act-europe.fr/gvd </li>
 <li>Afsnit om ntp ønskes</li>
 <li>Format af /etc/X11/XF86Config-4 filen</li>
