--- a/web/eksempler/php/admin/afslut.html
+++ b/web/eksempler/php/admin/afslut.html
@@ -16,7 +16,7 @@
 <p>
 <hr WIDTH="100%">
 <p><b><font color="#3333FF"><font size=+2>Se det i brug</font></font></b>
-<p><form ACTION="login.html">
+<p><form ACTION="../login.html">
 <input TYPE="submit" VALUE="Start >>" Name="start"></form></center>
 <p>
 <hr WIDTH="100%">
