--- a/todo.html
+++ b/todo.html
@@ -12,6 +12,10 @@
 <H1 align="center">TODO liste til Friheden</h1>
 
 <ul>
+<li>Skriv om Anjuta - konkurrent til KDevelop se mere på <a href="http://anjuta.sourgeforge.net">denne URL</a></li>
+<li>Skriv noget om egnede programmer til at skrive hjemmesider i.
+IBM har noget kommercielt, og ellers er der <a href="http://ftp.europeanservers.net/bluefish/downloads/?N=D">Bluefish</a></li>
+<li>Skriv om clustering : <a href="http://www.mosix.org">Mosix</a> og <a href="http://www.linuxvirtualserver.org">Linux virtual server</a></li>
 <li>Skriv om netovervågning med Big Brother, Netsaint osv.</li>
 <li>Skriv om GCD - http://libre.act-europe.fr/gvd </li>
 <li>Afsnit om at lave egne RPM-pakker og tilsvarende om at 
