--- a/todo.html
+++ b/todo.html
@@ -14,7 +14,7 @@
 <ul>
 <li>Skriv om Anjuta - konkurrent til KDevelop se mere på <a href="http://anjuta.sourgeforge.net">denne URL</a></li>
 <li>Skriv noget om egnede programmer til at skrive hjemmesider i.
-IBM har noget kommercielt, og ellers er der <a href="http://ftp.europeanservers.net/bluefish/downloads/?N=D">Bluefish</a></li>
+IBM har noget kommercielt, og ellers er der <a href="http://quanta.sourceforge.net/">Quanta</a>, <a href="http://ftp.europeanservers.net/bluefish/downloads/?N=D">Bluefish</a></li>
 <li>Skriv om clustering : <a href="http://www.mosix.org">Mosix</a> og <a href="http://www.linuxvirtualserver.org">Linux virtual server</a></li>
 <li>Skriv om netovervågning med Big Brother, Netsaint osv.</li>
 <li>Skriv om GCD - http://libre.act-europe.fr/gvd </li>
