--- a/todo.html
+++ b/todo.html
@@ -10,6 +10,7 @@
 <!--#include virtual="/includes/top.html" -->
 <!-- Text start -->
 <H1 align="center">TODO liste til Friheden</h1>
+<H3 align="center">Opdateret 2/7-2001</h3>
 
 <ul>
 <li>Skriv om Anjuta - konkurrent til KDevelop se mere på <a href="http://anjuta.sourgeforge.net">denne URL</a></li>
@@ -17,6 +18,7 @@
 IBM har noget kommercielt, og ellers er der <a href="http://quanta.sourceforge.net/">Quanta</a>, <a href="http://ftp.europeanservers.net/bluefish/downloads/?N=D">Bluefish</a></li>
 <li>Skriv om clustering : <a href="http://www.mosix.org">Mosix</a> og <a href="http://www.linuxvirtualserver.org">Linux virtual server</a></li>
 <li>Skriv om netovervågning med Big Brother, Netsaint osv.</li>
+<li>Skriv om lydredigering med Broadcast 2000, eller <a href="http://www.cs.cmu.edu/~music/audacity/linux.html">audacity</a>.</li>
 <li>Skriv om GCD - http://libre.act-europe.fr/gvd </li>
 <li>Afsnit om at lave egne RPM-pakker og tilsvarende om at 
 installere SRPM</li>
