--- a/todo.html
+++ b/todo.html
@@ -36,6 +36,7 @@ Er der ikke nogen af Jer som har lyst til at skrive om
 PHP og databaser. Eksempler som man nogenlunde nemt kan få i luften
 vil være guld.</li>
 <li>Stort ønske - brug af StarOffice/OpenOffice.</li>
+<li><a href="http://www.shadowcom.net/Software/infusion/index.html">Infusion</a></li>
 <li>Moduler til kernen</li>
 <li>/etc/modules.conf er stadig et mysterium - du må meget gerne
 forklare ;-)</li>
