--- a/templatebog/palm/home.html
+++ b/templatebog/palm/home.html
@@ -4,7 +4,7 @@
     "DTD/xhtml1-strict.dtd">
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Linux - Friheden til at vælge</title>
+    <title>Linux - Friheden til at vælge YYY</title>
   </head>
 <body>
 
