todo mht. linCVS

--- a/todo.html
+++ b/todo.html
@@ -10,10 +10,11 @@
 <!--#include virtual="/includes/top.html" -->
 <!-- Text start -->
 <H1 align="center">TODO liste til Friheden</h1>
-<H3 align="center">Opdateret 2/7-2001</h3>
+<H3 align="center">Opdateret 4/7-2001</h3>
 
 <ul>
 <li>Skriv om Anjuta - konkurrent til KDevelop se mere på <a href="http://anjuta.sourgeforge.net">denne URL</a></li>
+<li>Skriv om <a href="http://ppprs1.phy.tu-dresden.de/~trogisch/lincvs/index.php?lan=en">LinCVS</a></li>
 <li>Skriv noget om egnede programmer til at skrive hjemmesider i.
 IBM har noget kommercielt, og ellers er der <a href="http://quanta.sourceforge.net/">Quanta</a>, <a href="http://ftp.europeanservers.net/bluefish/downloads/?N=D">Bluefish</a></li>
 <li>Skriv om clustering : <a href="http://www.mosix.org">Mosix</a> og <a href="http://www.linuxvirtualserver.org">Linux virtual server</a></li>
