--- a/todo.html
+++ b/todo.html
@@ -13,6 +13,7 @@
 <H3 align="center">Opdateret 4/7-2001</h3>
 
 <ul>
+<li>Skriv om <a href="http://www.gnomemeeting.org">Gnomemeeting</a></li>
 <li>Skriv om Anjuta - konkurrent til KDevelop se mere på <a href="http://anjuta.sourgeforge.net">denne URL</a></li>
 <li>Skriv om <a href="http://ppprs1.phy.tu-dresden.de/~trogisch/lincvs/index.php?lan=en">LinCVS</a></li>
 <li>Skriv noget om egnede programmer til at skrive hjemmesider i.
