hjælp til selvhjælp

--- a/hjaelpe.html
+++ b/hjaelpe.html
@@ -29,10 +29,10 @@ versioner her ca. en gang per måned.</li>
 href="http://cvs.sslug.dk/linuxbog">http://cvs.sslug.dk/linuxbog</a>,
 som ikke kan forventes at være i orden. Der kommer nye udgaver her
 hver morgen hvis en af forfatterne har bidraget med noget nyt.</li>
-
+</ul>
 <p>
 Diskussionen af bog-indhold foregår på <a
-href="mailto:sslug-bog@sslug.dk">&lt;sslug-bog@sslug.dk&gt;</li>. Se
+href="mailto:sslug-bog@sslug.dk">sslug-bog@sslug.dk</a>. Se
 mere om tilmelding på 
 <a href="http://www.sslug.dk/tilmeld">http://www.sslug.dk/tilmeld</a>
 </p>
@@ -54,11 +54,13 @@ om du kommer til at ødelægge SGML-syntaksen. Skal du have et nyt
 billede ind så skriv bare INDSÆT BILLEDE XXX her eller lign.</li>
 <li>Hvis du ikke kan finde SGML-filen så beskriv fejlen så god som
 muligt og send den til <a
-href="mailto:sslug-bog@sslug.dk">&lt;sslug-bog@sslug.dk&gt;</li>.
+href="mailto:sslug-bog@sslug.dk">sslug-bog@sslug.dk</a:w
+>.
 Har du brug for at sende filer, så skriv hellere til 
 <a
-href="mailto:linuxbog@sslug.dk">&lt;linuxbog@sslug.dk&gt;</li>
+href="mailto:linuxbog@sslug.dk">linuxbog@sslug.dk</li>
 </li>
+</ul>
 </p>
 
 
