Erling Sjørlund retter

--- a/hjaelpe.html
+++ b/hjaelpe.html
@@ -52,13 +52,11 @@ bogen på <a href="http://cvs.sslug.dk/linuxbog/search">denne URL</a>.</li>
 <li>Ret SGML-filen til så du synes det er godt. Det gør ikke så meget
 om du kommer til at ødelægge SGML-syntaksen. Skal du have et nyt
 billede ind så skriv bare INDSÆT BILLEDE XXX her eller lign.</li>
-<li>Hvis du ikke kan finde SGML-filen så beskriv fejlen så god som
-muligt og send den til <a
-href="mailto:sslug-bog@sslug.dk">sslug-bog@sslug.dk</a:w
->.
-Har du brug for at sende filer, så skriv hellere til 
-<a
-href="mailto:linuxbog@sslug.dk">linuxbog@sslug.dk</li>
+<li>Send den rettede fil til <a
+href="mailto:linuxbog@sslug.dk">linuxbog@sslug.dk</a> som modtages af
+redaktørerne på bøgerne.<br>
+Hvis du ikke kan finde SGML-filen så beskriv fejlen så godt som muligt og
+send beskrivelsen til <a href="mailto:sslug-bog@sslug.dk">sslug-bog@sslug.dk</a>.</li>
 </li>
 </ul>
 </p>
