--- a/hjaelpe.html
+++ b/hjaelpe.html
@@ -59,6 +59,54 @@ Hvis du ikke kan finde SGML-filen så beskriv fejlen så godt som muligt og
 send beskrivelsen til <a href="mailto:sslug-bog@sslug.dk">sslug-bog@sslug.dk</a>.</li>
 </li>
 </ul>
+
+<hr>
+
+<h2>Liste over ting du meget gerne må skrive om</h2>
+
+<ul>
+<li>Skriv om <a href="http://www.gnomemeeting.org">Gnomemeeting</a></li>
+<li>Skriv om Anjuta - konkurrent til KDevelop se mere på <a href="http://anjuta.sourgeforge.net">denne URL</a></li>
+<li>Skriv om <a href="http://ppprs1.phy.tu-dresden.de/~trogisch/lincvs/index.php?lan=en">LinCVS</a></li>
+<li>Skriv noget om egnede programmer til at skrive hjemmesider i.
+IBM har noget kommercielt, og ellers er der <a href="http://quanta.sourceforge.net/">Quanta</a>, <a href="http://ftp.europeanservers.net/bluefish/downloads/?N=D">Bluefish</a></li>
+<li>Skriv om clustering : <a href="http://www.mosix.org">Mosix</a> og <a href="http://www.linuxvirtualserver.org">Linux virtual server</a></li>
+<li>Skriv om netovervågning med Big Brother, Netsaint osv.</li>
+<li>Skriv om lydredigering med Broadcast 2000, eller <a href="http://www.cs.cmu.edu/~music/audacity/linux.html">audacity</a>.</li>
+<li>Skriv om GCD - http://libre.act-europe.fr/gvd </li>
+<li>Afsnit om at lave egne RPM-pakker og tilsvarende om at 
+installere SRPM</li>
+<li>
+Er der ikke nogen af Jer som har lyst til at skrive om
+3D grafik; Se f.eks. http://www.linux.com/newsitem.phtml?sid=1&aid=11335</li>
+<li>Afsnit om systemovervågning - big brother, big sister osv.</li>
+<li>Afsnit om at droppe sendmail til fordel for qmail til admin bogen</li>
+<li>Afsnit om ezmlm (liste-manager til qmail).</li>
+<li>Installationsvejledning til nyeste Debian - skal i
+"friheden". Kenneth Geisshirt laver dette til ca. midt januar.</li>
+<li>Generel bedre understøttelse af Debian - i alle bøger.</li>
+<li>Bedre intro til bøgerne - generelt.</li>
+<li>Der skal meget mere i "web"-bogen om Apache, 
+PHP og databaser. Eksempler som man nogenlunde nemt kan få i luften
+vil være guld.</li>
+<li>Stort ønske - brug af StarOffice/OpenOffice.</li>
+<li><a href="http://www.shadowcom.net/Software/infusion/index.html">Infusion</a></li>
+<li>Moduler til kernen</li>
+<li>/etc/modules.conf er stadig et mysterium - du må meget gerne
+forklare ;-)</li>
+<li>Gerne noget om routning - lidt eksempler på hvordan sådan noget stykkes
+sammen!</li>
+<li>Noget om Dial On Demand - Igen eksempler, gerne, hvis det er muligt, om
+hvordan man sætter op med flere forskellige "profiler" afhængig af
+forespørgelsen fra klienten.</li>
+<li>Der mangler stadig mange ordforklaringer</li>
+<li>Det ville være godt med markering i SGML-filerne af flere
+stikord. Kontakt Peter Toft pto@sslug.dk hvis du vil hjælpe med dette</li>
+</li>
+
+</ul>
+
+
 </p>
 
 
