--- a/hjaelpe.html
+++ b/hjaelpe.html
@@ -71,6 +71,7 @@ send beskrivelsen til <a href="mailto:sslug-bog@sslug.dk">sslug-bog@sslug.dk</a>
 <li>Skriv noget om egnede programmer til at skrive hjemmesider i.
 IBM har noget kommercielt, og ellers er der <a href="http://quanta.sourceforge.net/">Quanta</a>, <a href="http://ftp.europeanservers.net/bluefish/downloads/?N=D">Bluefish</a></li>
 <li>Skriv om clustering : <a href="http://www.mosix.org">Mosix</a> og <a href="http://www.linuxvirtualserver.org">Linux virtual server</a></li>
+<li>Skriv om <a href="http://www.kaybee.org/~kirk/html/linux.html">AutoRPM</a></li>
 <li>Skriv om netovervågning med Big Brother, Netsaint osv.</li>
 <li>Skriv om lydredigering med Broadcast 2000, eller <a href="http://www.cs.cmu.edu/~music/audacity/linux.html">audacity</a>.</li>
 <li>Skriv om GCD - http://libre.act-europe.fr/gvd </li>
