--- a/hjaelpe.html
+++ b/hjaelpe.html
@@ -67,7 +67,9 @@ send beskrivelsen til <a href="mailto:sslug-bog@sslug.dk">sslug-bog@sslug.dk</a>
 <ul>
 <li>Skriv om <a href="http://www.gnomemeeting.org">Gnomemeeting</a></li>
 <li>Skriv om Anjuta - konkurrent til KDevelop se mere på <a href="http://anjuta.sourgeforge.net">denne URL</a></li>
-<li>Skriv om <a href="http://ppprs1.phy.tu-dresden.de/~trogisch/lincvs/index.php?lan=en">LinCVS</a></li>
+<li>Skriv om <a
+href="http://ppprs1.phy.tu-dresden.de/~trogisch/lincvs/index.php?lan=en">LinCVS</a></li>
+og <a href="http://cervisia.sourceforge.net/">Cervisia</a>.</li>
 <li>Skriv noget om egnede programmer til at skrive hjemmesider i.
 IBM har noget kommercielt, og ellers er der <a href="http://quanta.sourceforge.net/">Quanta</a>, <a href="http://ftp.europeanservers.net/bluefish/downloads/?N=D">Bluefish</a></li>
 <li>Skriv om clustering : <a href="http://www.mosix.org">Mosix</a> og <a href="http://www.linuxvirtualserver.org">Linux virtual server</a></li>
