Grove-snyd (pto) -> ny vejledning

--- a/laese-vejledning.html
+++ b/laese-vejledning.html
@@ -1,108 +1,97 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"
-	"http://www.w3.org/TR/REC-html40/loose.dtd">
-<HTML>
-<HEAD>
-<!-- Husk titel. Skal begynde med "SSLUG - " -->
-   <TITLE>Forskellige veje igennem Friheden til at vælge-bøgerne</TITLE>
-<LINK REL="STYLESHEET" HREF="/style/sslug.css" TYPE="text/css">
-</HEAD>
-<BODY>
-<!--#include virtual="/includes/top.html" -->
-<!-- Text start -->
+<html>
+<head>
+<title>Læsevejledning til "Friheden til at vælge"</title>
+</head>
+<body>
 
+<h1>Læsevejledning til læsevejledningen</h1>
 
-<h1>Forskellige veje igennem Friheden til at vælge-bøgerne</h1>
+<p>"Fuldt optrukne" pile er den vej
+du skal gå frem hvis du ikke ved bedre. "Prikkede" pile er det
+valgfrit om du vil følge men indikerer oplagte muligheder. Du er
+naturligvis altid velkommen til at gå tilbage og genlæse en af bøgerne
+eller følge en anden vej.</p>
 
-For at lette vejen igennem de mange bøger, er der tre interesse man kunne
-tænke sig læseren har:
-<ul>
-<li><a href="#styr-Linux">Jeg vil lære at styre en Linuxmaskine</a></li>
-<li><a href="#IT-strategi">Jeg skal til at vælge IT-strategi - hvad er Linux?</a></li>
-<li><a href="#Linux-bruger">Jeg vil kunne bruge en Linuxmaskine uden alle detaljer</a></li>
-</ul>
+<h1>Jeg vil lære at bruge en Linuxmaskine</h1>
 
-Klik på linket for at komme til en anbefalet læse-vejledning
-<p>
+<pre>
+"Friheden"      - Installation, styring og de basale dele af UNIX gennemgås.
+ |
+ |
+ V
+"Applikationer" - Grafiske(?) programmer til Linux.
+ |
+ |
+ V
+"Docbook"       - Nu skal du sørge for at alle dine erfaringer ikke
+                  går tabt.
+</pre>
+
 <hr>
-<p>
 
-<a name="styr-Linux"></a><h4>Jeg vil lære at styre en Linuxmaskine</h4>
+<h1>Jeg vil lære at styre en Linuxmaskine</h1>
+<p>(Kræver at du ved noget om Linux)</p>
+<pre>
+"Admin"         - Bogen for dig som skal lave en server for netværket.
+ |
+ |
+ V
+"Sikkerhed"     - Med en maskine på Internet bliver du nødt til at vide
+ |                noget om sikkerhed.
+ |
+ V
+"Web"           - Du vil sikkert også gerne have en webserver.
+ |
+ |
+ V
+"Sikkerhed"     - Kan ikke læses for tit hvis du har en maskine på
+ :                nettet!  
+ :
+ V
+"Docbook"    - Nu skal du sørge for at alle dine erfaringer ikke
+               går tabt.
+</pre>
 
-<font face="Courier New,Courier"><a href="/friheden">friheden</a> -
-Installation, styring og de basale dele af UNIX gennemgås</font><br>
-<font face="Courier New,Courier">&nbsp;&nbsp;|&nbsp;</font><br>
-<font face="Courier New,Courier">&nbsp;&nbsp;+->&nbsp;<a
-href="/admin">admin</a> - bogen for dig som skal lave en server for netværket</font><br>
-<font face="Courier New,Courier">&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| </font><br>
-<font face="Courier
-New,Courier">&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+-> <a
-href="/sikkerhed">sikkerhed</a> - sikkerheden på netværket skal man
-vide nok om hvis man er koblet til Internettet</font><br>
-<font face="Courier New,Courier">&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|  </font><br>
-<font face="Courier
-New,Courier">&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+-> <a
-href="/web">web</a> - Om at lave en web-, PHP- og database-server</font><br>
-<font face="Courier New,Courier">&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|  </font><br> 
-<font face="Courier
-New,Courier">&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+-> <a
-href="/sikkerhed">sikkerhed</a> - sikkerheden på netværket skal man
-vide nok om hvis man er koblet til Internettet</font><br>
-<font face="Courier New,Courier">&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|  </font><br>
-<font face="Courier
-New,Courier">&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+-> <a
-href="/program">program</a> - Intro til forskellige
-programmeringssprog under Linux</font><br>
-<font face="Courier New,Courier">&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|  </font><br>
-<font face="Courier
-New,Courier">&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\-> <a
-href="/c">c</a> - Bog om programmering i C</font><br>
-<font face="Courier New,Courier">&nbsp;&nbsp;|  </font><br>
-<font face="Courier New,Courier">&nbsp;&nbsp;+-> <a
-href="/applikationer">applikationer</a> - Grafiske programmer til Linux</font><br>
-<font face="Courier New,Courier">&nbsp;&nbsp;|  </font><br>
-<font face="Courier New,Courier">&nbsp;&nbsp;\-> <a
-href="/docbook">docbook</a> - Vil man skrive med på bøgerne så lær SGML/DocBook</font><br>
-
-<p>
 <hr>
-<p>
+<h1>Jeg vil bruge min Linuxmaskine til at programmere</h1>
+<pre>
+"Programmering" - Introduktion til forskellige programmeringssprog
+ :                under Linux.
+ :
+ V
+"C"             - Programmering i C.
+</pre>
 
-<a name="IT-strategi"></a><h4>Jeg skal til at vælge IT-strategi - hvad er Linux?</h4>
-
-<font face="Courier New,Courier"><a
-href="/itplatform">itplatform</a></font> - giver oversigten uden at gå
-i tekniske detaljer<br>
-<font face="Courier New,Courier">&nbsp;&nbsp;| </font><br>
-<font face="Courier New,Courier">&nbsp;&nbsp;\-> <a
-href="/applikationer">applikationer</a></font> - præsenterer en masse
-grafiske programmer til Linux-platformen<br>
-<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|</font><br>
-<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\-> <a
-href="/friheden">friheden</a></font> - Fortsæt derefter i
-begynder-bogen hvis man vil vide mere om det tekniske indhold.<br>
-
-<p>
 <hr>
-<p>
+<h1>Jeg skal til at vælge IT-platform</h1>
+<pre>
+"ITplatform"    - Giver oversigten uden at gå i tekniske detaljer.
+ |
+ |
+ V
+"Applikationer" - Præsenterer en masse grafiske programmer til
+ |                Linux-platformen.
+ |
+ V
+"Friheden"      - Fortsæt derefter i begynder-bogen hvis man vil
+		  vide mere om det tekniske indhold.
+</pre>
 
-<a name="Linux-bruger"></a><h4>Jeg vil kunne bruge en Linuxmaskine uden alle detaljer</h4>
+<hr>
+<h1>Jeg vil kunne bruge en Linuxmaskine uden alle detaljer</h1>
+<h3>(Hjælp - Chefen siger vi skal køre Linux)</h3>
+<pre>
+"Kontorbruger"  - Hjælper dig til at få lavet noget arbejde.
+ |
+ |
+ V
+"Applikationer" - præsenterer en masse grafiske programmer til
+ |                Linux-platformen
+ |
+ V
+"Friheden"      - Fortsæt derefter i begynder-bogen hvis man vil
+		  vide mere om det tekniske indhold.
+</pre>
 
-<a href="/kontorbruger">kontorbruger</a><br>
-<font face="Courier New,Courier">&nbsp;&nbsp;| </font><br>
-<font face="Courier New,Courier">&nbsp;&nbsp;\-> <a
-href="/applikationer">applikationer</a></font> - præsenterer en masse
-grafiske programmer til Linux-platformen<br>
-<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|</font><br>
-<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\-> <a
-href="/friheden">friheden</a></font> - Fortsæt derefter i
-begynder-bogen hvis man vil vide mere om det tekniske indhold.<br>
-
-<p>
-<!-- Text slut -->
-<!--#include virtual="/includes/bottom.html" -->
-<!-- Husk din email-adresse: -->
-<center><p>Denne side vedligeholdes af Peter Toft 
-(&lt;<A HREF="mailto:pto@sslug.dk">pto@sslug.dk</a>&gt;)</p>
-</center>
-</BODY>
-</HTML>
+</body>
+</html>
