--- a/laese-vejledning.html
+++ b/laese-vejledning.html
@@ -1,97 +1,107 @@
-<html>
-<head>
-<title>Læsevejledning til "Friheden til at vælge"</title>
-</head>
-<body>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"
+	"http://www.w3.org/TR/REC-html40/loose.dtd">
+<HTML>
+<HEAD>
+<!-- Husk titel. Skal begynde med "SSLUG - " -->
+   <TITLE>Forskellige veje igennem Friheden til at vælge-bøgerne</TITLE>
+<LINK REL="STYLESHEET" HREF="/style/sslug.css" TYPE="text/css">
+</HEAD>
+<BODY>
+<!--#include virtual="/includes/top.html" -->
+<!-- Text start -->
+
+
+<h1>Forskellige veje igennem Friheden til at vælge-bøgerne</h1>
+
+For at lette vejen igennem de mange bøger, er der tre interesse man kunne
+tænke sig læseren har:
+<ul>
+<li><a href="#styre-Linux">Jeg vil lære at styre en Linuxmaskine</a></li>
+<li><a href="#programmere-Linux">Jeg vil lære at styre en Linuxmaskine</a></li>
+<li><a href="#IT-strategi">Jeg skal til at vælge IT-strategi - hvad er Linux?</a></li>
+<li><a href="#Linux-bruger">Jeg vil kunne bruge en Linuxmaskine uden alle detaljer</a></li>
+</ul>
+
+Klik på linket for at komme til en anbefalet læse-vejledning
+<p>
+<hr>
+<p>
+
 
 <h1>Læsevejledning til læsevejledningen</h1>
 
-<p>"Fuldt optrukne" pile er den vej
-du skal gå frem hvis du ikke ved bedre. "Prikkede" pile er det
-valgfrit om du vil følge men indikerer oplagte muligheder. Du er
+<p>"\--->" er den anbefalede vej. "\evt>" indikerer oplagte muligheder. Du er
 naturligvis altid velkommen til at gå tilbage og genlæse en af bøgerne
 eller følge en anden vej.</p>
 
 <h1>Jeg vil lære at bruge en Linuxmaskine</h1>
 
-<pre>
-"Friheden"      - Installation, styring og de basale dele af UNIX gennemgås.
- |
- |
- V
-"Applikationer" - Grafiske(?) programmer til Linux.
- |
- |
- V
-"Docbook"       - Nu skal du sørge for at alle dine erfaringer ikke
-                  går tabt.
-</pre>
 
+<font face="Courier New,Courier"><a href="friheden">friheden</a></font> - Installation, styring og de basale dele af UNIX gennemgås.<br>
+<font face="Courier New,Courier">\---><a href="applikationer">applikationer</a></font> - Grafiske programmer til Linux.<br>
+<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt><a href="docbook">Docbook</a></font> - Nu skal du sørge for at alle dine erfaringer ikke går tabt.
+
+
+<p>
 <hr>
+<p>
 
-<h1>Jeg vil lære at styre en Linuxmaskine</h1>
-<p>(Kræver at du ved noget om Linux)</p>
-<pre>
-"Admin"         - Bogen for dig som skal lave en server for netværket.
- |
- |
- V
-"Sikkerhed"     - Med en maskine på Internet bliver du nødt til at vide
- |                noget om sikkerhed.
- |
- V
-"Web"           - Du vil sikkert også gerne have en webserver.
- |
- |
- V
-"Sikkerhed"     - Kan ikke læses for tit hvis du har en maskine på
- :                nettet!  
- :
- V
-"Docbook"    - Nu skal du sørge for at alle dine erfaringer ikke
-               går tabt.
-</pre>
 
+<a name="styre-Linux"></a><h1>Jeg vil lære at styre en Linuxmaskine</h1>
+
+<font face="Courier New,Courier"><a href="friheden">friheden</a></font> - Installation, styring og de basale dele af UNIX gennemgås.<br>
+<font face="Courier New,Courier">\---><a href="admin">Admin</a></font> - Bogen for dig som skal lave en server for netværket.<br>
+<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\---><a href="sikkerhed">Sikkerhed</a></font> - Med en maskine på Internet bliver du nødt til at vide<br>
+<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\---><a href="web">Web</a></font> - Du vil sikkert også gerne have en webserver.<br>
+<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt><a href="sikkerhed">Sikkerhed</a></font> - Kan ikke læses for tit hvis du har en maskine på nettet!  <br>
+<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt><a href="docbook">Docbook</a></font> - Nu skal du sørge for at alle dine erfaringer ikke går tabt.
+
+<p>
 <hr>
+<p>
+
+
+<a name="programmere-Linux"></a>
 <h1>Jeg vil bruge min Linuxmaskine til at programmere</h1>
-<pre>
-"Programmering" - Introduktion til forskellige programmeringssprog
- :                under Linux.
- :
- V
-"C"             - Programmering i C.
-</pre>
 
+<font face="Courier New,Courier"><a href="friheden">friheden</a></font>- Installation, styring og de basale dele af UNIX gennemgås.<br>
+<font face="Courier New,Courier">\---><a href="program">program</a></font>- Introduktion til forskellige programmeringssprog under Linux.<br>
+<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\---><a
+href="c">c</a></font> - Programmering i C.
+
+<p>
 <hr>
+<p>
+
+
+<a name="IT-strategi"></a>
 <h1>Jeg skal til at vælge IT-platform</h1>
-<pre>
-"ITplatform"    - Giver oversigten uden at gå i tekniske detaljer.
- |
- |
- V
-"Applikationer" - Præsenterer en masse grafiske programmer til
- |                Linux-platformen.
- |
- V
-"Friheden"      - Fortsæt derefter i begynder-bogen hvis man vil
-		  vide mere om det tekniske indhold.
-</pre>
 
+<font face="Courier New,Courier"><a href="itplatform">ITplatform</a></font>   - Giver oversigten uden at gå i tekniske detaljer.<br>
+<font face="Courier New,Courier">\---><a href="applikationer">applikationer</a></font> - Præsenterer en masse grafiske programmer til<br>
+<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt><a href="friheden">friheden</a></font> - Fortsæt derefter i  begynder-bogen hvis man vil vide mere om det tekniske indhold.
+
+<p>
 <hr>
-<h1>Jeg vil kunne bruge en Linuxmaskine uden alle detaljer</h1>
-<h3>(Hjælp - Chefen siger vi skal køre Linux)</h3>
-<pre>
-"Kontorbruger"  - Hjælper dig til at få lavet noget arbejde.
- |
- |
- V
-"Applikationer" - præsenterer en masse grafiske programmer til
- |                Linux-platformen
- |
- V
-"Friheden"      - Fortsæt derefter i begynder-bogen hvis man vil
-		  vide mere om det tekniske indhold.
-</pre>
+<p>
 
-</body>
-</html>
+
+<a name="Linux-bruger"></a><h1>Jeg vil kunne bruge en Linuxmaskine uden alle detaljer</h1>
+<h4>(Hjælp - Chefen siger vi skal køre Linux)</h4>
+
+<font face="Courier New,Courier"><a href="kontorbruger">kontorbruger</a></font> - Hjælper dig til at få lavet noget arbejde.<br>
+<font face="Courier New,Courier">\---><a href="applikationer">applikationer</a></font> - præsenterer en masse grafiske programmer til<br>
+<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt><a href="friheden">friheden</a></font> - Fortsæt derefter i begynder-bogen hvis man vide mere om det tekniske indhold.
+
+<p>
+<hr>
+<p>
+
+<!-- Text slut -->
+<!--#include virtual="/includes/bottom.html" -->
+<!-- Husk din email-adresse: -->
+<center><p>Denne side vedligeholdes af Peter Toft 
+(&lt;<A HREF="mailto:pto@sslug.dk">pto@sslug.dk</a>&gt;)</p>
+</center>
+</BODY>
+</HTML>
