--- a/laese-vejledning.html
+++ b/laese-vejledning.html
@@ -16,8 +16,10 @@
 For at lette vejen igennem de mange bøger, er der tre interesse man kunne
 tænke sig læseren har:
 <ul>
+<li><a href="#bruge-Linux">Jeg vil lære at bruge en Linuxmaskine</a></li>
 <li><a href="#styre-Linux">Jeg vil lære at styre en Linuxmaskine</a></li>
-<li><a href="#programmere-Linux">Jeg vil lære at styre en Linuxmaskine</a></li>
+<li><a href="#programmere-Linux">Jeg vil lære at
+programmere på en Linuxmaskine</a></li>
 <li><a href="#IT-strategi">Jeg skal til at vælge IT-strategi - hvad er Linux?</a></li>
 <li><a href="#Linux-bruger">Jeg vil kunne bruge en Linuxmaskine uden alle detaljer</a></li>
 </ul>
@@ -34,7 +36,7 @@ Klik på linket for at komme til en anbefalet læse-vejledning
 naturligvis altid velkommen til at gå tilbage og genlæse en af bøgerne
 eller følge en anden vej.</p>
 
-<h1>Jeg vil lære at bruge en Linuxmaskine</h1>
+<a name="bruge-Linux"></a><h1>Jeg vil lære at bruge en Linuxmaskine</h1>
 
 
 <font face="Courier New,Courier"><a href="friheden">friheden</a></font> - Installation, styring og de basale dele af UNIX gennemgås.<br>
@@ -96,6 +98,8 @@ href="c">c</a></font> - Programmering i C.
 <p>
 <hr>
 <p>
+
+<a href="/">tilbage til oversigten</a>
 
 <!-- Text slut -->
 <!--#include virtual="/includes/bottom.html" -->
