--- a/laese-vejledning.html
+++ b/laese-vejledning.html
@@ -53,7 +53,7 @@ eller følge en anden vej.</p>
 
 <font face="Courier New,Courier"><a href="friheden">friheden</a></font> - Installation, styring og de basale dele af UNIX gennemgås.<br>
 <font face="Courier New,Courier">\---><a href="admin">Admin</a></font> - Bogen for dig som skal lave en server for netværket.<br>
-<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\---><a href="sikkerhed">Sikkerhed</a></font> - Med en maskine på Internet bliver du nødt til at vide<br>
+<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\---><a href="sikkerhed">Sikkerhed</a></font> - Med en maskine på Internet bliver du nødt til at vide noget om sikkerhed<br>
 <font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\---><a href="web">Web</a></font> - Du vil sikkert også gerne have en webserver.<br>
 <font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt><a href="sikkerhed">Sikkerhed</a></font> - Kan ikke læses for tit hvis du har en maskine på nettet!  <br>
 <font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt><a href="docbook">Docbook</a></font> - Nu skal du sørge for at alle dine erfaringer ikke går tabt.
@@ -80,8 +80,8 @@ href="c">c</a></font> - Programmering i C.
 <h1>Jeg skal til at vælge IT-platform</h1>
 
 <font face="Courier New,Courier"><a href="itplatform">ITplatform</a></font>   - Giver oversigten uden at gå i tekniske detaljer.<br>
-<font face="Courier New,Courier">\---><a href="applikationer">applikationer</a></font> - Præsenterer en masse grafiske programmer til<br>
-<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt><a href="friheden">friheden</a></font> - Fortsæt derefter i  begynder-bogen hvis man vil vide mere om det tekniske indhold.
+<font face="Courier New,Courier">\---><a href="applikationer">applikationer</a></font> - Præsenterer en masse grafiske programmer til Linux<br>
+<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt><a href="friheden">friheden</a></font> - Fortsæt derefter i  begynder-bogen hvis du vil vide mere om det tekniske indhold.
 
 <p>
 <hr>
@@ -92,8 +92,8 @@ href="c">c</a></font> - Programmering i C.
 <h4>(Hjælp - Chefen siger vi skal køre Linux)</h4>
 
 <font face="Courier New,Courier"><a href="kontorbruger">kontorbruger</a></font> - Hjælper dig til at få lavet noget arbejde.<br>
-<font face="Courier New,Courier">\---><a href="applikationer">applikationer</a></font> - præsenterer en masse grafiske programmer til<br>
-<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt><a href="friheden">friheden</a></font> - Fortsæt derefter i begynder-bogen hvis man vide mere om det tekniske indhold.
+<font face="Courier New,Courier">\---><a href="applikationer">applikationer</a></font> - præsenterer en masse grafiske programmer til Linux<br>
+<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt><a href="friheden">friheden</a></font> - Fortsæt derefter i begynder-bogen hvis du vil vide mere om det tekniske indhold.
 
 <p>
 <hr>
