Gjort "C" valgfri i "programmerings"-vejen.

--- a/laese-vejledning.html
+++ b/laese-vejledning.html
@@ -68,7 +68,7 @@ eller følge en anden vej.</p>
 
 <font face="Courier New,Courier"><a href="friheden">friheden</a></font>- Installation, styring og de basale dele af UNIX gennemgås.<br>
 <font face="Courier New,Courier">\---><a href="program">program</a></font>- Introduktion til forskellige programmeringssprog under Linux.<br>
-<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\---><a
+<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt><a
 href="c">c</a></font> - Programmering i C.
 
 <p>
