Opdateringer af URL'er osv

--- a/hjaelpe.html
+++ b/hjaelpe.html
@@ -67,9 +67,10 @@ send beskrivelsen til <a href="mailto:sslug-bog@sslug.dk">sslug-bog@sslug.dk</a>
 <h2>Liste over ting du meget gerne må skrive om</h2>
 
 <ul>
-<li>Skriv om <a href="http://www.gnomemeeting.org">Gnomemeeting</a></li>
-<li>Skriv om Anjuta - konkurrent til KDevelop se mere på <a href="http://anjuta.sourgeforge.net">denne URL</a></li>
-<li>Skriv om <a
+<li>Skriv om <a href="http://www.gnomemeeting.org">Gnomemeeting</a> -
+konkurrent til MS Netmeeting</li>
+<li>Skriv om Anjuta - konkurrent til KDevelop se mere på <a href="http://anjuta.sourceforge.net/">denne URL</a></li>
+<li>Skriv om CVS-GUI <a
 href="http://ppprs1.phy.tu-dresden.de/~trogisch/lincvs/index.php?lan=en">LinCVS</a></li>
 og <a href="http://cervisia.sourceforge.net/">Cervisia</a>.</li>
 <li>Skriv noget om egnede programmer til at skrive hjemmesider i.
@@ -78,17 +79,17 @@ IBM har noget kommercielt, og ellers er der <a href="http://quanta.sourceforge.n
 <li>Skriv om <a href="http://www.kaybee.org/~kirk/html/linux.html">AutoRPM</a></li>
 <li>Skriv om netovervågning med Big Brother, Netsaint osv.</li>
 <li>Skriv om lydredigering med Broadcast 2000, eller <a href="http://www.cs.cmu.edu/~music/audacity/linux.html">audacity</a>.</li>
-<li>Skriv om GCD - http://libre.act-europe.fr/gvd </li>
+<li>Skriv om <a href="http://libre.act-europe.fr/gvd">GCD</a></li>
 <li>Afsnit om at lave egne RPM-pakker og tilsvarende om at 
 installere SRPM</li>
 <li>
 Er der ikke nogen af Jer som har lyst til at skrive om
-3D grafik; Se f.eks. http://www.linux.com/newsitem.phtml?sid=1&aid=11335</li>
+3D grafik; Se f.eks. <a href="http://www.linux.com/newsitem.phtml?sid=1&aid=11335">her</a></li>
 <li>Afsnit om systemovervågning - big brother, big sister osv.</li>
 <li>Afsnit om at droppe sendmail til fordel for qmail til admin bogen</li>
-<li>Afsnit om ezmlm (liste-manager til qmail).</li>
+<li>Afsnit om qmail og ezmlm (liste-manager til qmail).</li>
 <li>Installationsvejledning til nyeste Debian - skal i
-"friheden". Kenneth Geisshirt laver dette til ca. midt januar.</li>
+"friheden".</li>
 <li>Generel bedre understøttelse af Debian - i alle bøger.</li>
 <li>Bedre intro til bøgerne - generelt.</li>
 <li>Der skal meget mere i "web"-bogen om Apache, 
