ajourføring af info

--- a/laese-vejledning.html
+++ b/laese-vejledning.html
@@ -13,6 +13,10 @@
 
 <h1>Forskellige veje igennem Friheden til at vælge-bøgerne</h1>
 
+<i>Der er kommet flere bøger til og derfor at denne side ikke helt
+ajour</i>
+<br>
+
 For at lette vejen igennem de mange bøger, er der tre interesse man kunne
 tænke sig læseren har:
 <ul>
