--- a/laese-vejledning.html
+++ b/laese-vejledning.html
@@ -45,7 +45,7 @@ eller følge en anden vej.</p>
 
 <font face="Courier New,Courier"><a href="friheden">friheden</a></font> - Installation, styring og de basale dele af UNIX gennemgås.<br>
 <font face="Courier New,Courier">\---><a href="applikationer">applikationer</a></font> - Grafiske programmer til Linux.<br>
-<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt><a href="docbook">Docbook</a></font> - Nu skal du sørge for at alle dine erfaringer ikke går tabt.
+<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt><a href="dokumentation">Dokumentation</a></font> - Nu skal du sørge for at alle dine erfaringer ikke går tabt.
 
 
 <p>
@@ -55,12 +55,15 @@ eller følge en anden vej.</p>
 
 <a name="styre-Linux"></a><h1>Jeg vil lære at styre en Linuxmaskine</h1>
 
-<font face="Courier New,Courier"><a href="friheden">friheden</a></font> - Installation, styring og de basale dele af UNIX gennemgås.<br>
-<font face="Courier New,Courier">\---><a href="admin">Admin</a></font> - Bogen for dig som skal lave en server for netværket.<br>
-<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\---><a href="sikkerhed">Sikkerhed</a></font> - Med en maskine på Internet bliver du nødt til at vide noget om sikkerhed<br>
-<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\---><a href="web">Web</a></font> - Du vil sikkert også gerne have en webserver.<br>
-<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt><a href="sikkerhed">Sikkerhed</a></font> - Kan ikke læses for tit hvis du har en maskine på nettet!  <br>
-<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt><a href="docbook">Docbook</a></font> - Nu skal du sørge for at alle dine erfaringer ikke går tabt.
+<font face="Courier New,Courier"><a
+href="friheden">friheden</a></font> - Installation af Linux.<br>
+<font face="Courier New,Courier">\---><a href="unix">unix</a></font> -
+Styring af Linux og de basale dele af UNIX gennemgås.<br>
+<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\---><a href="admin">Admin</a></font> - Bogen for dig som skal lave en server for netværket.<br>
+<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\---><a href="sikkerhed">Sikkerhed</a></font> - Med en maskine på Internet bliver du nødt til at vide noget om sikkerhed<br>
+<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\---><a href="web">Web</a></font> - Du vil sikkert også gerne have en webserver.<br>
+<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt><a href="sikkerhed">Sikkerhed</a></font> - Kan ikke læses for tit hvis du har en maskine på nettet!  <br>
+<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt><a href="dokumentation">Dokumentation</a></font> - Nu skal du sørge for at alle dine erfaringer ikke går tabt.
 
 <p>
 <hr>
@@ -70,11 +73,12 @@ eller følge en anden vej.</p>
 <a name="programmere-Linux"></a>
 <h1>Jeg vil bruge min Linuxmaskine til at programmere</h1>
 
-<font face="Courier New,Courier"><a href="friheden">friheden</a></font>- Installation, styring og de basale dele af UNIX gennemgås.<br>
-<font face="Courier New,Courier">\---><a href="program">program</a></font>- Introduktion til forskellige programmeringssprog under Linux.<br>
-<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt><a
-href="c">c</a></font> - Programmering i C.
-
+<font face="Courier New,Courier"><a href="friheden">friheden</a></font> - Installation af Linux.<br>
+<font face="Courier New,Courier">\---><a href="unix">unix</a></font> - 
+Styring af Linux og de basale dele af UNIX gennemgås.<br>
+<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\---><a href="program">program</a></font> - Introduktion til forskellige programmeringssprog under Linux.<br>
+<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\--->
+<a href="c">c</a></font> - Programmering i C.
 <p>
 <hr>
 <p>
@@ -97,7 +101,7 @@ href="c">c</a></font> - Programmering i C.
 
 <font face="Courier New,Courier"><a href="kontorbruger">kontorbruger</a></font> - Hjælper dig til at få lavet noget arbejde.<br>
 <font face="Courier New,Courier">\---><a href="applikationer">applikationer</a></font> - præsenterer en masse grafiske programmer til Linux<br>
-<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt><a href="friheden">friheden</a></font> - Fortsæt derefter i begynder-bogen hvis du vil vide mere om det tekniske indhold.
+<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt><a href="unix">unix</a></font> - Fortsæt derefter i begynder-bogen hvis du vil vide mere om det tekniske indhold.
 
 <p>
 <hr>
