Noget at rydde op?

--- a/alle/palm/home.html
+++ b/alle/palm/home.html
@@ -23,7 +23,7 @@ Bogen kan også læses på adressen <tt>http://www.sslug.dk/linuxbog<tt>
 </p>
 
 <p>
-Se bogens <a href="file:../alle/stikord.html">stikordsregister</a>.
+Se bogens <a href="file:../bog/stikord.html">stikordsregister</a>.
 </p>
 
 <p>
