--- a/licens.html
+++ b/licens.html
@@ -14,6 +14,7 @@
 <h3>Version 0.91 (20. december 2001)</h3>
 <h3>Forfatter: Jacob Nordfalk &lt;nordfalk@mobilixnet.dk&gt;</h3>
 
+<hr width=60%>
 
 <h4>1. Kopiering og distribution af værket i uændret form</h3>
 
