--- a/hjaelpe.html
+++ b/hjaelpe.html
@@ -26,7 +26,7 @@ Vi arbejder altid i to udgaver af bøgerne
 href="http://www.sslug.dk/linuxbog">http://www.sslug.dk/linuxbog</a>,
 som kan forventes at være i orden. Finder du et link eller en fil som
 ikke findes, så vil vi meget gerne vide dette. Der kommer nye
-versioner her ca. en gang per måned.</li>
+versioner her ca. en gang per måned - måske hver anden måned :)</li>
 <li>Beta-versioner på <a
 href="http://cvs.sslug.dk/linuxbog">http://cvs.sslug.dk/linuxbog</a>,
 som ikke kan forventes at være i orden. Der kommer nye udgaver her
