ups - defekt URL

--- a/hjaelpe.html
+++ b/hjaelpe.html
@@ -43,7 +43,7 @@ mere om tilmelding på
 <p>
 Bøgerne er skrevet i et sprog som hedder DocBook, der er en
 SGML-variant. Det minder en hel del om HTML, dvs. er tekstbaseret.
-Du kan læse mere om DocBook på <a href="http:www.sslug.dk/linuxbog/dokumentation/bog/">http:www.sslug.dk/linuxbog/dokumentation/bog/</a>.
+Du kan læse mere om DocBook på <a href="http://www.sslug.dk/linuxbog/dokumentation/bog/">http://www.sslug.dk/linuxbog/dokumentation/bog/</a>.
 </p>
 
 <p>
