Ny version af ÅDL licensen

--- a/licens.html
+++ b/licens.html
@@ -11,7 +11,7 @@
 
 <H1 align="center">Åben dokumentlicens (ÅDL)</h1>
 
-<h3>Version 0.91 (20. december 2001)</h3>
+<h3>Version 0.95 (17. Januar 2002)</h3>
 <h3>Forfatter: Jacob Nordfalk &lt;nordfalk@mobilixnet.dk&gt;</h3>
 
 
@@ -22,14 +22,15 @@ Du må frit kopiere dette værk uændret og distribuere det på
 ethvert medium, forudsat at du sammen med hver kopi bibeholder 
 denne licens og en henvisning til værkets kilde.
 <p>
-Du kan vælge at kræve penge for kopiering og distribution af 
-indholdet, for undervisning i indholdet, for brugerstøtte og 
-garantier i forbindelse med indholdet.
-Hvis du videregiver værket til andre, har du pligt til at se 
-til, at du selv eller andre giver gratis elektronisk adgang 
-til indholdet via internettet og at der i hver kopi tydeligt 
-angives, hvordan en elektronisk udgave - i et åbent redigérbart 
-format - af indholdet kan hentes.
+Du kan vælge at kræve penge for kopiering og distribution af
+indholdet, for undervisning i indholdet, for brugerstøtte og garantier
+i forbindelse med indholdet.  Hvis du videregiver værket til andre,
+har du pligt til at se til, at du selv eller andre giver modtageren
+gratis adgang i minimum 3 år til en elektronisk udgave af indholdet -
+i et åbent redigérbart format - for eksempel via internettet, og at
+der i hvert eksemplar tydeligt angives, hvordan man kan få den
+elektroniske udgave.
+
 
 
 
@@ -47,11 +48,11 @@ anmærkning om at du ændrede det, hvad du ændrede og datoen for
 ("licens"), som det oprindelige værk.</li>
 </ul>
 
-Alternativt kan det nye værk bære almindelig ophavsretlig
-beskyttelse, forudsat at samtlige dele, der oprindeligt stammer fra
-dette værk, tydeligt er markeret (f.eks i sidefoden på hver side) 
-som værende under denne licens, og at licensen følges for disse
-dele af værket, herunder at der gives gratis elektronisk adgang 
+Alternativt kan det nye værk bære en anden licens eller almindelig
+ophavsretlig beskyttelse, forudsat at samtlige dele, der oprindeligt
+stammer fra dette værk, tydeligt er markeret (f.eks i sidefoden på
+hver side) som værende under denne licens, og at licensen følges for
+disse dele af værket, herunder at der gives gratis elektronisk adgang
 som nævnt under afsnittet om kopiering og distribution.
 
 
