--- a/licens.html
+++ b/licens.html
@@ -9,12 +9,18 @@
 <!--#include virtual="/includes/top.html" -->
 <!-- Text start -->
 
+<p align=center><img src="licens/licens.png"></p>
+
 <H1 align="center">Åben dokumentlicens (ÅDL)</h1>
 
-<h3>Version 0.95 (17. Januar 2002)</h3>
-<h3>Forfatter: Jacob Nordfalk &lt;nordfalk@mobilixnet.dk&gt;</h3>
 
 
+<p>
+<h4>Version 1.0 (25. januar 2002) - licensen kan findes på http://www.sslug.dk/licens</h4>
+<h4>Forfatter: Jacob Nordfalk &lt;nordfalk@mobilixnet.dk&gt;</h4>
+<h4>Logo: Torben Linde</h4>
+
+<hr>
 
 <h3>1. Kopiering og distribution af værket i uændret form</h3>
 
