--- a/licens.html
+++ b/licens.html
@@ -16,7 +16,7 @@
 
 
 <p>
-<h4>Version 1.0 (25. januar 2002) - licensen kan findes på http://www.sslug.dk/licens</h4>
+<h4>Version 1.0 (25. januar 2002) - licensen kan findes på http://www.sslug.dk/licens.html</h4>
 <h4>Forfatter: Jacob Nordfalk &lt;nordfalk@mobilixnet.dk&gt;</h4>
 <h4>Logo: Torben Linde</h4>
 
