--- a/laese-vejledning.html
+++ b/laese-vejledning.html
@@ -13,9 +13,6 @@
 
 <h1>Forskellige veje igennem Friheden til at vælge-bøgerne</h1>
 
-<i>Der er kommet flere bøger til og derfor at denne side ikke helt
-ajour</i>
-<br>
 
 For at lette vejen igennem de mange bøger, er der tre interesse man kunne
 tænke sig læseren har:
@@ -78,7 +75,9 @@ Styring af Linux og de basale dele af UNIX gennemgås.<br>
 Styring af Linux og de basale dele af UNIX gennemgås.<br>
 <font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\---><a href="program">program</a></font> - Introduktion til forskellige programmeringssprog under Linux.<br>
 <font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\--->
-<a href="c">c</a></font> - Programmering i C.
+<a href="c">c</a></font> - Programmering i C.<br>
+<font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\--->
+<a href="c">Java</a></font> - Programmering i Java.
 <p>
 <hr>
 <p>
@@ -87,7 +86,7 @@ Styring af Linux og de basale dele af UNIX gennemgås.<br>
 <a name="IT-strategi"></a>
 <h1>Jeg skal til at vælge IT-platform</h1>
 
-<font face="Courier New,Courier"><a href="itplatform">ITplatform</a></font>   - Giver oversigten uden at gå i tekniske detaljer.<br>
+<font face="Courier New,Courier"><a href="itplatform">itplatform</a></font>   - Giver oversigten uden at gå i tekniske detaljer.<br>
 <font face="Courier New,Courier">\---><a href="applikationer">applikationer</a></font> - Præsenterer en masse grafiske programmer til Linux<br>
 <font face="Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt><a href="friheden">friheden</a></font> - Fortsæt derefter i  begynder-bogen hvis du vil vide mere om det tekniske indhold.
 
