--- a/licens.html
+++ b/licens.html
@@ -79,7 +79,12 @@ Indholdet leveres "som det er", uden nogen form for garanti for
 købs-, brugs- eller nytteværdi, medmindre der er givet en særskilt
 skriftlig garanti herom.
 
+<p>
 
+<hr>
+<p>
+Værker som beskyttes af Åben dokumentlicens (ÅDL) kan 
+<a href="licens/vaerker.html">læses her</a>.
 
 
 <!-- Text slut -->
