--- a/licens.html
+++ b/licens.html
@@ -79,9 +79,8 @@ Indholdet leveres "som det er", uden nogen form for garanti for
 købs-, brugs- eller nytteværdi, medmindre der er givet en særskilt
 skriftlig garanti herom.
 
-<p>
-
-<hr>
+<p align=center>
+...oooOOOooo...
 <p>
 Værker som beskyttes af Åben dokumentlicens (ÅDL) kan 
 <a href="licens/vaerker.html">læses her</a>.
