--- a/licens/vaerker.html
+++ b/licens/vaerker.html
@@ -12,6 +12,9 @@
 
 <H1 align="center">Værker under Åben dokumentlicens (ÅDL)</h1>
 
+<p align=center><img src="licens.png"></p>
+
+
 <ul>
 <li>Frit Firewall-kursus <a href="http://www.chbs.dk/kurser/firewall">http://www.chbs.dk/kurser/firewall</a></li>
 <li>Frit Samba-kursus <a href="http://www.chbs.dk/kurser/samba">http://www.chbs.dk/kurser/samba</a></li>
