--- a/licens.html
+++ b/licens.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
    <TITLE>Åben dokumentlicens (ÅDL)</TITLE>
-<LINK REL="STYLESHEET" HREF="/style/sslug.css" TYPE="text/css">
+<LINK REL="STYLESHEET" HREF="linuxbog.css" TYPE="text/css">
 </HEAD>
 <BODY>
 <!--#include virtual="/includes/top.html" -->
@@ -80,7 +80,7 @@ købs-, brugs- eller nytteværdi, medmindre der er givet en særskilt
 skriftlig garanti herom.
 
 <p align=center>
-...oooOOOooo...
+<hr>
 <p>
 Værker som beskyttes af Åben dokumentlicens (ÅDL) kan 
 <a href="licens/vaerker.html">læses her</a>.
