--- a/licens/vaerker.html
+++ b/licens/vaerker.html
@@ -16,6 +16,8 @@
 
 
 <ul>
+<li>
+<a href="http://debianguiden.dk/">Debianguiden</a> er en bog om Debian</li>
 <li>Frit Firewall-kursus <a href="http://www.chbs.dk/kurser/firewall">http://www.chbs.dk/kurser/firewall</a></li>
 <li>Frit Samba-kursus <a href="http://www.chbs.dk/kurser/samba">http://www.chbs.dk/kurser/samba</a></li>
 <li>Alle "Linux - Friheden til at vælge" bøger på <a href="http://www.sslug.dk/linuxbog">http://www.sslug.dk/linuxbog</a></li>
