Rettet bogens titel i palm/home.html.

--- a/dokumentation/palm/home.html
+++ b/dokumentation/palm/home.html
@@ -4,13 +4,13 @@
     "DTD/xhtml1-strict.dtd">
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Friheden til at programmere i C</title>
+    <title>Friheden til at skrive dokumentation</title>
   </head>
 <body>
 
 <!-- ######################################################################### -->
 
-<h1>Friheden til at programmere i C</h1>
+<h1>Friheden til at skrive dokumentation</h1>
 
     <ul>
     <li> <a href="file:../bog/index.html" 
